# ninjaeventdisplay

./: .gitignore  CMakeLists.txt  README
script/: draw_and_save.sh  run_shell.py
src/: CMakeLists.txt  EventDisplayNinjaSf.cpp  TrackerDisplayNinjaSf.cpp
